# compiler

./: CMakeLists.txt  run_tests.sh
include/: ast.h  error.h  lexer.h  parser.h  scope.h  scope_manager.h  symbol.h  token.h  token_type.h  tokenizer.h  types.h
src/: lexer.cpp  main.cpp  parser.cpp  tokenizer.cpp
tests/: CMakeLists.txt  parser_test.cpp  test_main.cpp
